# Mini-Waslny

./: CMakeLists.txt  DataStructure.sln
DataStructure/: Algo.cpp  Algo.h  DataStructure.vcxproj  DataStructure.vcxproj.filters  Files.cpp  Files.h  Graph.cpp  Graph.h  Source.cpp  storedGraphs.txt
DataStructure/Debug/: DataStructure.exe.recipe  DataStructure.ilk  vc142.idb
DataStructure/Debug/DataStructure.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DataStructure.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DataStructure/storedgraphs/: directedG.txt  someone.txt  test.txt
